--- a/LCD_ADC - Acelerometro/plantilla_ITM_debug.uvprojx
+++ b/LCD_ADC - Acelerometro/plantilla_ITM_debug.uvprojx
@@ -335,7 +335,7 @@
               <MiscControls></MiscControls>
               <Define>USE_STDPERIPH_DRIVER,STM32F4XX</Define>
               <Undefine></Undefine>
-              <IncludePath>.;..\terceros\STM32F4-Discovery_FW_V1.1.0\Libraries\CMSIS\Include;..\terceros\STM32F4-Discovery_FW_V1.1.0\Libraries\CMSIS\ST\STM32F4xx\Include;..\terceros\STM32F4-Discovery_FW_V1.1.0\Libraries\STM32F4xx_StdPeriph_Driver\inc;..\terceros\STM32F4-Discovery_FW_V1.1.0\Utilities\STM32F4-Discovery;..\terceros\binario;..\terceros\lcd;..\terceros\adc;..\terceros\accelerometer</IncludePath>
+              <IncludePath>.;..\terceros\STM32F4-Discovery_FW_V1.1.0\Libraries\CMSIS\Include;..\terceros\STM32F4-Discovery_FW_V1.1.0\Libraries\CMSIS\ST\STM32F4xx\Include;..\terceros\STM32F4-Discovery_FW_V1.1.0\Libraries\STM32F4xx_StdPeriph_Driver\inc;..\terceros\STM32F4-Discovery_FW_V1.1.0\Utilities\STM32F4-Discovery;..\terceros\binario;..\terceros\lcd;..\terceros\adc;..\terceros\accelerometer;..\terceros\hyperion</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
@@ -457,7 +457,7 @@
           </Files>
         </Group>
         <Group>
-          <GroupName>BinarioPapu</GroupName>
+          <GroupName>Binario</GroupName>
           <Files>
             <File>
               <FileName>binario.c</FileName>
@@ -523,6 +523,16 @@
               <FileName>stm32f4xx_spi.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\terceros\STM32F4-Discovery_FW_V1.1.0\Libraries\STM32F4xx_StdPeriph_Driver\src\stm32f4xx_spi.c</FilePath>
+            </File>
+          </Files>
+        </Group>
+        <Group>
+          <GroupName>MiLibreria</GroupName>
+          <Files>
+            <File>
+              <FileName>hyperion.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\terceros\hyperion\hyperion.c</FilePath>
             </File>
           </Files>
         </Group>
